# batch-processing

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
src/: lib.rs
src/core/: job.rs  mod.rs  step.rs
src/job/: job_builder.rs  mod.rs
src/step/: mod.rs  step_builder.rs
src/step/complex/: mod.rs  reader.rs
src/step/simple_step/: mod.rs
src/sync/: mod.rs
src/sync/job/: job_builder.rs  mod.rs
src/sync/step/: mod.rs  step_builder.rs
src/sync/step/complex_step/: mod.rs  processor.rs  reader.rs  writable.rs
src/sync/step/simple_step/: mod.rs
src/tokio/job/: job_builder.rs  mod.rs  utils.rs
src/tokio/step/: mod.rs  parallel_step_builder.rs  step_builder.rs
src/tokio/step/complex_step/: mod.rs
src/tokio/step/simple_step/: mod.rs
tests/: mod.rs
tests/job/: mod.rs
tests/migrations/: car_prices.sql
tests/step/: simple_step.rs
tests/sync/job/: mod.rs
tests/sync/step/: complex_step.rs  simple_step.rs
tests/tokio/: mod.rs
tests/tokio/job/: mod.rs
tests/tokio/step/: mod.rs  simple_step.rs
tests/tokio/step/complex_step/: complex_step.rs  mod.rs  transfer_data_complex_step.rs
tests/tokio/step/simple_step/: mod.rs
tests/tokio/tokio/: mod.rs
tests/utils/: log.rs
