[package]
name = "batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.21"
tokio = { version = "1.36.0", features = ["time", "test-util", "full"] }
futures = "0.3.30"
async-trait = "0.1.78"
[dev-dependencies]
pretty_env_logger = "0.5.0"
