[package]
name = "batch-processing"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/luiz-eduardo14/batch-processing"
readme = "README.md"
exclude = [
    "tests/resources"
]
authors = [
    "Luiz Eduardo <masterdudu123@hotmail.com>"
]
description = "A batch library for processing a list of items in parallel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.21"
tokio = { version = "1.36.0", features = ["fs", "rt", "sync", "macros"] }
tokio-fs = "0.1.7"
futures = "0.3.30"
async-trait = "0.1.79"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
peak_alloc = "0.2.0"
pretty_env_logger = "0.5.0"
refinery = {version = "0.8.12", features = ["tokio-postgres"]}
zip = "0.6.6"
csv-async = {version = "1.3.0", features = ["tokio"]}
diesel = {version = "2.1.5", features = ["chrono"]}
diesel-async = { version = "0.4.1", features = ["r2d2", "deadpool", "postgres"] }
diesel_migrations = "2.1.0"
tokio-postgres = "0.7.10"
deadpool-postgres = "0.12.1"